--- a/old-home-2.html
+++ b/old-home-2.html
@@ -30,7 +30,7 @@
       </a>
       <nav role="navigation" class="nav-menu dark-mobile w-nav-menu">
         <a href="index.html" class="nav-link dark w-nav-link">Work</a>
-        <a href="old-home-2.html" aria-current="page" class="nav-link about w-nav-link w--current">About</a>
+        <a href="about.html" aria-current="page" class="nav-link about w-nav-link w--current">About</a>
       </nav>
       <div class="menu-button dark _2 w-nav-button">
         <div class="icon dark-icon w-icon-nav-menu"></div>
