--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav-link active w-nav-link w--current">Work</a>
-        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
+        <a href="about.html" class="nav-link w-nav-link">About</a>
       </nav>
       <div class="menu-button light light-theeeme _1 w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
