--- a/401.html
+++ b/401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jul 28 2022 12:30:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 00:13:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b9696bd79e6a98e" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -16,8 +16,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:200italic,300,300italic,regular,500,600,700,800,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.jpg" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-3XF66MM2H3"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-3XF66MM2H3', {'anonymize_ip': false});</script>
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
@@ -25,9 +25,7 @@
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand">
-        <p class="logo">Desmond.</p>
-      </a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link active w-nav-link">Work</a>
         <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
