--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jul 28 2022 12:30:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 00:13:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96969d36e6a98b" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -23,8 +23,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:200italic,300,300italic,regular,500,600,700,800,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.jpg" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-3XF66MM2H3"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-3XF66MM2H3', {'anonymize_ip': false});</script>
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
@@ -32,12 +32,10 @@
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="my-container w-container">
-      <a href="index.html" aria-current="page" class="brand w-nav-brand w--current">
-        <p class="logo">Desmond.</p>
-      </a>
+      <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" aria-current="page" class="nav-link active w-nav-link w--current">Work</a>
-        <a href="about.html" class="nav-link w-nav-link">About</a>
+        <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
       </nav>
       <div class="menu-button light light-theeeme _1 w-nav-button">
         <div class="icon w-icon-nav-menu"></div>
@@ -46,7 +44,7 @@
   </div>
   <div class="full-screen wf-section">
     <div class="my-container">
-      <h1>Hello there! <br>I&#x27;m Desmond Ajimuda</h1>
+      <h1 class="heading-28">Hello there! <br>I&#x27;m Desmond Ajimuda</h1>
       <h1 class="herotext-2">I help companies build brands &amp; create digital experiences.</h1>
       <div class="w-embed">
         <style>
@@ -65,64 +63,122 @@
   <div id="WORK" class="section wf-section">
     <div class="my-container">
       <div class="content">
-        <h2 class="center-align">&quot;Simple is Better&quot;</h2>
-        <p class="center-align">Throughout my career as a designer, I&#x27;ve been privileged to work with talented designers to innovate consumer products that simplify millions of people&#x27;s lives for organisations such as Clane, Sterling Bank, Betking and others. some of these projects touch upon their core businesses and are, unfortunately, not available to view.<br></p>
-        <p class="semi-bold-p center-align">Here are a few projects that I&#x27;d like to share</p>
+        <h2 class="center-text">&quot;Simple is Better&quot;</h2>
+        <p class="center-text">Throughout my career as a designer, I&#x27;ve been privileged to work with talented designers to innovate consumer products that simplify millions of people&#x27;s lives for organisations such as Clane, Sterling Bank, Betking and others. some of these projects touch upon their core businesses and are, unfortunately, not available to view.<br></p>
+        <p class="semi-bold-p">Here are a few projects that I&#x27;d like to share</p>
         <div class="text-block-2"></div>
       </div>
     </div>
   </div>
-  <div class="work-section wf-section">
-    <div class="container">
-      <h3 class="heading-18">UI/UX Case studies</h3>
-      <div class="w-layout-grid grid-19">
-        <a id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eec2-36e6a98b" href="https://medium.com/@jazzed_navy_mule_655/bento-africa-unsolicited-redesign-48893e148cf0" target="_blank" class="project-block w-inline-block">
-          <div class="w-layout-grid grid-14"><img src="images/Bento-Redesign-2.png" loading="lazy" width="800" srcset="images/Bento-Redesign-2-p-500.png 500w, images/Bento-Redesign-2.png 800w" alt="Olamigration Ads image" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 89vw, 800.0000610351562px" class="image-2">
-            <div id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eec5-36e6a98b">
-              <h4>Unsolicited Redesign - Bento Africa App</h4>
-              <p class="paragraph-12">I redesigned Bento Africa, a cloud-based salaries and benefits solution software mobile app.</p>
+  <div class="section hidden wf-section">
+    <div class="my-container">
+      <div class="w-layout-grid grid-28">
+        <a id="w-node-f4cc1fe3-8b83-6f8e-6ee5-3e671a505ebd-36e6a98b" href="#" class="w-inline-block">
+          <div id="w-node-_9f875740-1ecb-ab6a-c1f1-cd1a8549bc30-36e6a98b" class="w-layout-grid grid-27">
+            <div id="w-node-_53d6170a-c6a1-7ac4-420e-c73e58687317-36e6a98b"><img src="images/Optimus-Bank.jpg" loading="lazy" srcset="images/Optimus-Bank-p-500.jpg 500w, images/Optimus-Bank-p-800.jpg 800w, images/Optimus-Bank-p-1080.jpg 1080w, images/Optimus-Bank-p-1600.jpg 1600w, images/Optimus-Bank-p-2000.jpg 2000w, images/Optimus-Bank-p-2600.jpg 2600w, images/Optimus-Bank-p-3200.jpg 3200w, images/Optimus-Bank.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
+            <div id="w-node-_99393ccb-3b69-fa97-008f-c741cbc86fd5-36e6a98b">
+              <p class="project-title">Optimus bank experience design</p>
+              <p class="project-year">ClaneLabs 2022</p>
             </div>
           </div>
         </a>
-        <a id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eeca-36e6a98b" href="https://medium.com/@jazzed_navy_mule_655/in-app-card-request-flow-for-uba-9d0d2153726f" target="_blank" class="project-block w-inline-block">
-          <div class="w-layout-grid grid-15"><img src="images/Card-Request-2.png" loading="lazy" width="1250" srcset="images/Card-Request-2-p-500.png 500w, images/Card-Request-2.png 800w" alt="Flytime websited design image" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 89vw, 88vw">
-            <div id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eecd-36e6a98b">
-              <h4>In-app Card Request Flow for UBA</h4>
-              <p class="paragraph-12">I attempted a design challenge, designing an in-app card request flow for a traditional bank.</p>
+        <a id="w-node-e78fb182-c80e-1bdf-e107-be7e17286039-36e6a98b" href="#" class="w-inline-block">
+          <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516b-36e6a98b" class="w-layout-grid grid-27">
+            <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516c-36e6a98b"><img src="images/ClanePOS-Cover.jpg" loading="lazy" srcset="images/ClanePOS-Cover-p-500.jpg 500w, images/ClanePOS-Cover-p-800.jpg 800w, images/ClanePOS-Cover-p-1080.jpg 1080w, images/ClanePOS-Cover-p-1600.jpg 1600w, images/ClanePOS-Cover-p-2000.jpg 2000w, images/ClanePOS-Cover-p-2600.jpg 2600w, images/ClanePOS-Cover-p-3200.jpg 3200w, images/ClanePOS-Cover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
+            <div id="w-node-da8ddd27-31ca-a44b-d641-8677ab01516e-36e6a98b">
+              <p class="project-title">ClanePOS</p>
+              <p class="project-year">Clane 2022</p>
             </div>
           </div>
         </a>
-        <a id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eed2-36e6a98b" href="https://medium.com/@jazzed_navy_mule_655/password-recovery-flow-for-a-cryptocurrency-app-b3ba68f448ae" target="_blank" class="project-block w-inline-block">
-          <div class="w-layout-grid grid-15"><img src="images/Password-Recovery-1.png" loading="lazy" id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eed4-36e6a98b" srcset="images/Password-Recovery-1-p-500.png 500w, images/Password-Recovery-1.png 800w" alt="Made in figma collection" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 89vw, 800.0000610351562px">
-            <div id="w-node-_67599775-d740-66ce-4f79-ac6a5e41eed5-36e6a98b">
-              <h4>Password Recovery Flow for a Cryptocurrency App</h4>
-              <p class="paragraph-12">I attempted a design challenge, designing password recovery for cryptocurrency app for Andriod.</p>
+        <a id="w-node-_168dec3a-4d2f-f60c-e57c-59184be68eaf-36e6a98b" href="#" class="w-inline-block">
+          <div id="w-node-c545102e-217d-1331-d0ee-202eba192606-36e6a98b" class="w-layout-grid grid-27">
+            <div id="w-node-c545102e-217d-1331-d0ee-202eba192607-36e6a98b"><img src="images/ClanepayCover.jpg" loading="lazy" srcset="images/ClanepayCover-p-500.jpg 500w, images/ClanepayCover-p-800.jpg 800w, images/ClanepayCover-p-1080.jpg 1080w, images/ClanepayCover-p-1600.jpg 1600w, images/ClanepayCover-p-2000.jpg 2000w, images/ClanepayCover-p-2600.jpg 2600w, images/ClanepayCover-p-3200.jpg 3200w, images/ClanepayCover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
+            <div id="w-node-c545102e-217d-1331-d0ee-202eba192609-36e6a98b">
+              <p class="project-title">ClanePay experience revamp</p>
+              <p class="project-year">Clane 2022</p>
+            </div>
+          </div>
+        </a>
+        <a id="w-node-_9b62be61-5120-6df0-b377-2d4eb6a1373d-36e6a98b" href="#" class="w-inline-block">
+          <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc40f-36e6a98b" class="w-layout-grid grid-27">
+            <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc410-36e6a98b"><img src="images/OnePay-Cover.jpg" loading="lazy" srcset="images/OnePay-Cover-p-500.jpg 500w, images/OnePay-Cover-p-800.jpg 800w, images/OnePay-Cover-p-1080.jpg 1080w, images/OnePay-Cover-p-1600.jpg 1600w, images/OnePay-Cover-p-2000.jpg 2000w, images/OnePay-Cover-p-2600.jpg 2600w, images/OnePay-Cover-p-3200.jpg 3200w, images/OnePay-Cover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
+            <div id="w-node-_96a10d96-913b-43a1-95af-f79be45fc412-36e6a98b">
+              <p class="project-title">OnePay for business merchant dashboard</p>
+              <p class="project-year">ClaneLab 2021</p>
             </div>
           </div>
         </a>
       </div>
     </div>
   </div>
-  <div class="work-section wf-section">
-    <div class="container">
-      <h3 class="heading-18">Visual Design</h3>
-      <div class="w-layout-grid grid-22">
-        <a id="w-node-_8faa79a3-3cc3-c4f4-a736-7349cea2af0b-36e6a98b" href="https://www.behance.net/gallery/140589645/Flytime-Music-Festival-2021" target="_blank" class="project-block w-inline-block">
-          <div class="w-layout-grid grid-15"><img src="images/Flytime-Music-Festival-2.png" loading="lazy" width="1250" srcset="images/Flytime-Music-Festival-2-p-500.png 500w, images/Flytime-Music-Festival-2.png 800w" alt="Flytime websited design image" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 89vw, 88vw">
-            <div id="w-node-_8faa79a3-3cc3-c4f4-a736-7349cea2af0e-36e6a98b">
-              <h4>2021 Flytime Music Festival</h4>
-              <p class="paragraph-12">I designed a responsive website for 2021 Flytime Music Festival event ticket sales.</p>
-            </div>
+  <div class="section wf-section">
+    <div class="my-container">
+      <div class="side-by-side-flex">
+        <div class="project-details">
+          <div class="div-block-36">
+            <h3>Experience revamp of ClanePay formerly Clane.</h3>
+            <p>How we designed an experience that better match the user&#x27;s mental model of making payment with a digital wallet. </p>
+            <a href="experience-revamp-of-clanepay.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
-        </a>
-        <a href="social-media-graphics.html" id="w-node-_8faa79a3-3cc3-c4f4-a736-7349cea2af13-36e6a98b" class="project-block w-inline-block">
-          <div class="w-layout-grid grid-15"><img src="images/Made-in-Figma.png" loading="lazy" width="1250" srcset="images/Made-in-Figma-p-500.png 500w, images/Made-in-Figma.png 800w" alt="Flytime websited design image" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 89vw, 88vw">
-            <div id="w-node-_8faa79a3-3cc3-c4f4-a736-7349cea2af16-36e6a98b">
-              <h4>Made in Figma</h4>
-              <p class="paragraph-12">A growing collection of social media banners I designed in Figma</p>
-            </div>
+        </div>
+        <div class="project-image"><img src="images/ClanepayCover-min.jpg" loading="lazy" width="540" srcset="images/ClanepayCover-min-p-500.jpg 500w, images/ClanepayCover-min-p-800.jpg 800w, images/ClanepayCover-min-p-1080.jpg 1080w, images/ClanepayCover-min-p-1600.jpg 1600w, images/ClanepayCover-min-p-2000.jpg 2000w, images/ClanepayCover-min-p-2600.jpg 2600w, images/ClanepayCover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="Clanepay intro image"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="my-container">
+      <div class="reverse-flex">
+        <div class="left-image-block"><img src="images/ClanePOS-Cover-min.jpg" loading="lazy" width="540" srcset="images/ClanePOS-Cover-min-p-500.jpg 500w, images/ClanePOS-Cover-min-p-800.jpg 800w, images/ClanePOS-Cover-min-p-1080.jpg 1080w, images/ClanePOS-Cover-min-p-1600.jpg 1600w, images/ClanePOS-Cover-min-p-2000.jpg 2000w, images/ClanePOS-Cover-min-p-2600.jpg 2600w, images/ClanePOS-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="ClanePOS"></div>
+        <div class="left-project-details">
+          <div class="div-block-37">
+            <h3>ClanePOS: Driving contactless Payment for over 20000+ merchant in Africa.</h3>
+            <p>I designed a device that enables the merchant to enhance their services and revenue.</p>
+            <a href="clanepos.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
-        </a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="section hidden wf-section">
+    <div class="my-container">
+      <div class="side-by-side-flex reverse">
+        <div class="project-details">
+          <div class="div-block-36">
+            <h3>Experience revamp of ClanePay formerly Clane.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+            <a href="#" class="button-ghost w-button">LEARN MORE</a>
+          </div>
+        </div>
+        <div class="project-image"><img src="images/ClanepayCover.jpg" loading="lazy" srcset="images/ClanepayCover-p-500.jpg 500w, images/ClanepayCover-p-800.jpg 800w, images/ClanepayCover-p-1080.jpg 1080w, images/ClanepayCover-p-1600.jpg 1600w, images/ClanepayCover-p-2000.jpg 2000w, images/ClanepayCover-p-2600.jpg 2600w, images/ClanepayCover-p-3200.jpg 3200w, images/ClanepayCover.jpg 3200w" sizes="(max-width: 479px) 0px, 100vw" alt=""></div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="my-container">
+      <div class="side-by-side-flex">
+        <div class="project-details">
+          <div class="div-block-36">
+            <h3>Optimal banking experience design for Optimus Bank.</h3>
+            <p>I designed an optimal banking experience on web and mobile app for Optimus bank.</p>
+            <a href="underconstruction.html" class="button-ghost w-button">VIEW PROJECT</a>
+          </div>
+        </div>
+        <div class="project-image"><img src="images/Optimus-Bank-min.jpg" loading="lazy" width="540" srcset="images/Optimus-Bank-min-p-500.jpg 500w, images/Optimus-Bank-min-p-800.jpg 800w, images/Optimus-Bank-min-p-1080.jpg 1080w, images/Optimus-Bank-min-p-1600.jpg 1600w, images/Optimus-Bank-min-p-2000.jpg 2000w, images/Optimus-Bank-min-p-2600.jpg 2600w, images/Optimus-Bank-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="OPTIMUS"></div>
+      </div>
+    </div>
+  </div>
+  <div class="section wf-section">
+    <div class="my-container">
+      <div class="reverse-flex">
+        <div class="left-image-block"><img src="images/OnePay-Cover-min.jpg" loading="lazy" width="540" srcset="images/OnePay-Cover-min-p-500.jpg 500w, images/OnePay-Cover-min-p-800.jpg 800w, images/OnePay-Cover-min-p-1080.jpg 1080w, images/OnePay-Cover-min-p-1600.jpg 1600w, images/OnePay-Cover-min-p-2000.jpg 2000w, images/OnePay-Cover-min-p-2600.jpg 2600w, images/OnePay-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="STERLING"></div>
+        <div class="left-project-details">
+          <div class="div-block-37">
+            <h3>OnePay for business merchant dashboard</h3>
+            <p>I designed a fast and secured means for merchants to self-serve using their mobile devices while they interact with the world.</p>
+            <a href="underconstruction.html" class="button-ghost w-button">VIEW PROJECT</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
