--- a/one-pay-for-business-merchant-dashboard.html
+++ b/one-pay-for-business-merchant-dashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Thu Jul 28 2022 12:30:12 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 00:13:16 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96963a78e6a994" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -21,8 +21,8 @@
   <script type="text/javascript">WebFont.load({  google: {    families: ["Poppins:200italic,300,300italic,regular,500,600,700,800,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.png" rel="apple-touch-icon">
+  <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
+  <link href="images/webclip.jpg" rel="apple-touch-icon">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-3XF66MM2H3"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-3XF66MM2H3', {'anonymize_ip': false});</script>
   <meta name="google-site-verification" content="pwE1tlRCgkTCf9vj-ch5A8ml8zfThOoOvesvGE0Rt3I">
@@ -30,9 +30,7 @@
 <body>
   <div data-animation="default" data-collapse="small" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
     <div class="my-container w-container">
-      <a href="index.html" class="brand w-nav-brand">
-        <p class="logo">Desmond.</p>
-      </a>
+      <a href="index.html" class="brand w-nav-brand"><img src="images/LOGO.svg" loading="lazy" alt=""></a>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav-link active w-nav-link">Work</a>
         <a href="old-home-2.html" class="nav-link w-nav-link">About</a>
@@ -42,92 +40,46 @@
       </div>
     </div>
   </div>
-  <div class="section wf-section">
+  <div class="section plus wf-section">
     <div class="my-container">
-      <h1 class="center-align black-heading">One Pay for Business Merchant Dashboard </h1>
+      <h2 class="center-align black-heading">One Pay for Business Merchant Dashboard </h2>
       <div class="content">
-        <p class="center-align">A case study about designing the MVP for a merchant dashboard using the Ant Design System. <br>My first experience designing a dashboard</p>
+        <p class="center">A case study about designing the MVP for a merchant dashboard using the Ant Design System. My first experience designing a dashboard</p>
       </div>
-      <div class="div-block-28"><img src="images/New-Macbook-Pro-Mockup-Front-View-2.png" loading="lazy" width="1015.5" srcset="images/New-Macbook-Pro-Mockup-Front-View-2-p-500.png 500w, images/New-Macbook-Pro-Mockup-Front-View-2-p-800.png 800w, images/New-Macbook-Pro-Mockup-Front-View-2-p-1080.png 1080w, images/New-Macbook-Pro-Mockup-Front-View-2-p-1600.png 1600w, images/New-Macbook-Pro-Mockup-Front-View-2-p-2000.png 2000w, images/New-Macbook-Pro-Mockup-Front-View-2.png 2031w" alt="Mockup of sterling merchant dashboard" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, 88vw" class="center-align"></div>
+      <div class="div-block-28"><img src="images/New-Macbook-Pro-Mockup-Front-View-2.png" loading="lazy" width="1015.5" srcset="images/New-Macbook-Pro-Mockup-Front-View-2-p-500.png 500w, images/New-Macbook-Pro-Mockup-Front-View-2-p-800.png 800w, images/New-Macbook-Pro-Mockup-Front-View-2-p-1080.png 1080w, images/New-Macbook-Pro-Mockup-Front-View-2-p-1600.png 1600w, images/New-Macbook-Pro-Mockup-Front-View-2-p-2000.png 2000w, images/New-Macbook-Pro-Mockup-Front-View-2.png 2031w" alt="Mockup of sterling merchant dashboard" sizes="(max-width: 479px) 94vw, (max-width: 767px) 95vw, (max-width: 991px) 91vw, 88vw" class="center-align"></div>
     </div>
   </div>
   <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">About</h2>
+    <div class="w-container">
+      <div class="section-block">
+        <h3 class="black-heading">About</h3>
         <p>One Pay for business is one of Sterling&#x27;s ( Africa’s fastest growing fintech platform) product, that serve an access point for SMEs to all Sterling’s digital solutions. It is a convenient, fast and secured means for merchants to self-serve using their mobile devices while they interact with the world.<br><br>The timeline for this project was 2 weeks.</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">The Challenge</h2>
+      <div class="section-block">
+        <h3 class="black-heading">The Challenge</h3>
         <p>Mid-sized and large businesses using OnePay for Business want access to Merchant dashboard that allows for overall management of their collections and disbursement operations and allows for multi-account privileges.</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">Goal</h2>
+      <div class="section-block">
+        <h3 class="black-heading">Goal</h3>
         <p>Design an MVP of a dashboard for merchants that will enable them to analyze or track transactions and collectors using the Ant Design System</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">My Role</h2>
+      <div class="section-block">
+        <h3 class="black-heading">My Role</h3>
         <p>I designed, user test, and followed up the development of this project from end to end. I collaborated with product managers and engineers through the entire project.</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
+      <div class="section-block">
         <p class="center-align quotes">&quot;To comply with my confidentiality agreement I have omitted and appropriated confidential information about the challenge and the design process. These designs are a reinterpretation of the original&quot;</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">Early Ideation</h2>
-        <p>I kicked off a design sprint together with the Lead Product Manager. Using Figma as a remote collaboration tool, we gathered inspiration for how we might help merchants track transactions and collections. <br><br>Then I started sketching some ideas in my mind</p><img src="images/Screenshot-2022-04-05-at-3.05.03-PM.png" loading="lazy" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" srcset="images/Screenshot-2022-04-05-at-3.05.03-PM-p-500.png 500w, images/Screenshot-2022-04-05-at-3.05.03-PM-p-800.png 800w, images/Screenshot-2022-04-05-at-3.05.03-PM-p-1080.png 1080w, images/Screenshot-2022-04-05-at-3.05.03-PM-p-1600.png 1600w, images/Screenshot-2022-04-05-at-3.05.03-PM-p-2000.png 2000w, images/Screenshot-2022-04-05-at-3.05.03-PM.png 2182w" alt="A sketch of the dashboard ">
+      <div class="section-block">
+        <h3 class="black-heading">Early Ideation</h3>
+        <p>I kicked off a design sprint together with the Lead Product Manager. Using Figma as a remote collaboration tool, we gathered inspiration for how we might help merchants track transactions and collections. <br><br>Then I started sketching some ideas in my mind</p>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2 class="black-heading">The MVP</h2>
+      <div class="section-block">
+        <h3 class="black-heading">The MVP</h3>
         <p>To validate our research findings, I designed a simple dashboard for tracking transactions, collections and collector&#x27;s activities with the option to export reports for these data and removed a couple of features discussed in our &#x27;Card Sorting&#x27; session.<br><br>This version of the dashboard is soft-launched to a smaller set of actual users<br>‍<br></p>
-        <div class="div-block-35"><img src="images/Overview.png" loading="lazy" srcset="images/Overview-p-500.png 500w, images/Overview-p-800.png 800w, images/Overview-p-1080.png 1080w, images/Overview.png 1440w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="Dashboard">
-          <p class="center-align">The Dashboard </p>
-        </div>
-        <div class="div-block-35"><img src="images/All-Transaction.png" loading="lazy" srcset="images/All-Transaction-p-500.png 500w, images/All-Transaction-p-800.png 800w, images/All-Transaction-p-1080.png 1080w, images/All-Transaction.png 1440w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="All Transactions">
-          <p class="center-align">All Transactions</p>
-        </div>
-        <div class="div-block-35"><img src="images/Pending-Transactions.png" loading="lazy" srcset="images/Pending-Transactions-p-500.png 500w, images/Pending-Transactions-p-800.png 800w, images/Pending-Transactions-p-1080.png 1080w, images/Pending-Transactions.png 1440w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="Pending Transactions">
-          <p class="center-align">Pending Transactions</p>
-        </div>
-        <div class="div-block-35"><img src="images/Customer-Profile.png" loading="lazy" srcset="images/Customer-Profile-p-500.png 500w, images/Customer-Profile-p-800.png 800w, images/Customer-Profile-p-1080.png 1080w, images/Customer-Profile.png 1445w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="Collector Profile">
-          <p class="center-align">Collectors Profile</p>
-        </div>
-        <div class="div-block-35"><img src="images/Collectors-Acitivity.png" loading="lazy" srcset="images/Collectors-Acitivity-p-500.png 500w, images/Collectors-Acitivity-p-800.png 800w, images/Collectors-Acitivity-p-1080.png 1080w, images/Collectors-Acitivity.png 1445w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="Collector Activities">
-          <p class="center-align">Collectors Activity</p>
-        </div>
-        <div class="div-block-35"><img src="images/Collector--Performance.png" loading="lazy" srcset="images/Collector--Performance-p-500.png 500w, images/Collector--Performance-p-800.png 800w, images/Collector--Performance-p-1080.png 1080w, images/Collector--Performance.png 1445w" sizes="(max-width: 479px) 94vw, (max-width: 767px) 92vw, (max-width: 991px) 88vw, 850.0000610351562px" alt="Collectors Activity">
-          <p class="center-align">Collectors Performance</p>
-        </div>
       </div>
-    </div>
-  </div>
-  <div class="section wf-section">
-    <div class="my-container">
-      <div class="content">
-        <h2>Next Step</h2>
+      <div class="section-block">
+        <h3>Next Step</h3>
         <p>This version of the dashboard has been well received by our merchants. However, there are still improvements that can be made. We are gathering feedback and working on the MMP</p>
       </div>
     </div>
