--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 00:13:16 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 01:05:24 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96969d36e6a98b" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -133,7 +133,7 @@
         <div class="left-project-details">
           <div class="div-block-37">
             <h3>ClanePOS: Driving contactless Payment for over 20000+ merchant in Africa.</h3>
-            <p>I designed a device that enables the merchant to enhance their services and revenue.</p>
+            <p>I designed a device that enables merchant to enhance their services and revenue.</p>
             <a href="clanepos.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
         </div>
