--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 01:05:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 02:45:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="627173f28b96969d36e6a98b" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -7,10 +7,10 @@
   <meta content="Desmond is a designer with experience in creating innovative and impactful design solutions for software products through UI/UX." name="description">
   <meta content="Meet Desmond Ajimuda - UX Designer/Webflow Developer." property="og:title">
   <meta content="Desmond is a designer with experience in creating innovative and impactful design solutions for software products through UI/UX." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/61bba3b3c26659558fdd2a7b/62483f267a1cd1c5e654fd9e_Screenshot%202022-04-02%20at%201.19.23%20PM.png" property="og:image">
+  <meta content="https://uploads-ssl.webflow.com/61bba3b3c26659558fdd2a7b/63213b9e0dc0fb4895dce591_IMG_1260-min.jpg" property="og:image">
   <meta content="Meet Desmond Ajimuda - UX Designer/Webflow Developer." property="twitter:title">
   <meta content="Desmond is a designer with experience in creating innovative and impactful design solutions for software products through UI/UX." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/61bba3b3c26659558fdd2a7b/62483f267a1cd1c5e654fd9e_Screenshot%202022-04-02%20at%201.19.23%20PM.png" property="twitter:image">
+  <meta content="https://uploads-ssl.webflow.com/61bba3b3c26659558fdd2a7b/63213b9e0dc0fb4895dce591_IMG_1260-min.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -132,7 +132,7 @@
         <div class="left-image-block"><img src="images/ClanePOS-Cover-min.jpg" loading="lazy" width="540" srcset="images/ClanePOS-Cover-min-p-500.jpg 500w, images/ClanePOS-Cover-min-p-800.jpg 800w, images/ClanePOS-Cover-min-p-1080.jpg 1080w, images/ClanePOS-Cover-min-p-1600.jpg 1600w, images/ClanePOS-Cover-min-p-2000.jpg 2000w, images/ClanePOS-Cover-min-p-2600.jpg 2600w, images/ClanePOS-Cover-min-p-3200.jpg 3200w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 540px, 44vw" alt="ClanePOS"></div>
         <div class="left-project-details">
           <div class="div-block-37">
-            <h3>ClanePOS: Driving contactless Payment for over 20000+ merchant in Africa.</h3>
+            <h3>ClanePOS: Turn your phone into a POS.</h3>
             <p>I designed a device that enables merchant to enhance their services and revenue.</p>
             <a href="clanepos.html" class="button-ghost w-button">VIEW PROJECT</a>
           </div>
