--- a/underconstruction.html
+++ b/underconstruction.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  -->
-<!--  Last Published: Wed Sep 14 2022 01:05:24 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Sep 14 2022 02:45:08 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63204aadd1d6583b4ed70b8c" data-wf-site="61bba3b3c26659558fdd2a7b">
 <head>
   <meta charset="utf-8">
@@ -40,7 +40,7 @@
       <div class="div-block-40">
         <div class="div-block-39"><img src="images/404-illustration.svg" loading="lazy" width="257" alt="404"></div>
         <h2>Currently working on this project</h2>
-        <p>The case study will be available to view when the project is completed. <br>However I can do a walkthrough of this project if needed for employment or collaboration purposes.</p>
+        <p>The case study will be available to view when the project is completed. <br>However I can do a walkthrough of this project if needed for opportunities or collaboration purposes.</p>
         <a href="index.html" class="button-ghost w-button">GO BACK TO HOME</a>
       </div>
     </div>
